--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,13 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "kinetics"
 version = "0.0.1"
+authors = [
+  {name = "Yang Long", email = "yang.l.al@m.titech.ac.jp"},
+  {name = "Atsushi Ishikawa", email = "ishikawa.a.ai@m.titech.ac.jp"},
+]
+requires-python = "<3.13"
 dependencies = [
-                   "numpy"
-	       ]
+    "ase~=3.24",
+    "pymatgen==2025.3.10",
+    "matgl==1.2.1",
+]
