--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
   "pyyaml~=6.0",
   "pyqt5==5.15.11",
   "mace-torch==0.3.13",
+  "scikit-learn==1.7.0",
+  "seaborn==0.13.2",
 ]
 
 [tool.setuptools]
