--- a/examples/oer/adsorbate.yaml
+++ b/examples/oer/adsorbate.yaml
@@ -1,7 +1,11 @@
 # ABO3, 1x1x1
 # offset: [1.0, 1.0]
-# height: 1.7  
+# height: 1.8  
 
 # ABO3, 2x2x1
-offset: [0.5, 0.5]
-height: 1.7
+# offset: [0.5, 0.5]
+# height: 1.8
+
+# ABO3, 2x2x1
+offset: [0.25, 0.25]
+height: 1.8
